--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 :root {
   font-family: 'Lato', sans-serif;
@@ -11,4 +11,16 @@
 .home-bg {
   background-image: url('/img/home-bg.png');
   background-repeat: no-repeat;
+}
+
+.bg-rugged {
+  background-color: #115e59;
+}
+
+.bg-simple {
+  background-color: #e17654;
+}
+
+.bg-luxury {
+  background-color: #161616;
 }
